--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^0.14.1",
+    "copy-webpack-plugin": "^3.0.1",
+    "node-sass": "^3.10.0",
+    "sass-loader": "^4.0.2"
+
   }
 }
