--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "vue-router": "^2.0.0",
+    "vue-scroll": "^1.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -68,6 +70,5 @@
     "copy-webpack-plugin": "^3.0.1",
     "node-sass": "^3.10.0",
     "sass-loader": "^4.0.2"
-
   }
 }
